--- a/Ani-Me/src/components/home.css
+++ b/Ani-Me/src/components/home.css
@@ -1,4 +1,3 @@
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -46,7 +45,7 @@
   font-family: inherit;
   border-radius: 8px;
   transition: color 0.3s, transform 0.2s;
-  margin-bottom: 40px; /* Added space below the button */
+  margin-bottom: 40px;
 }
 
 .btn::before {
@@ -72,13 +71,10 @@
 }
 
 .socials {
-  margin-top: 20px; 
+  margin-top: 20px;
 }
 
 .card {
-  width: fit-content;
-  height: fit-content;
-  background-color: transparent; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -87,59 +83,63 @@
 }
 
 .socialContainer {
-  width: 52px;
-  height: 52px;
-  border-radius: 50%; 
-  background-color: rgba(255, 255, 255, 0.1); 
+  width: 60px;  
+  height: 60px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  transition-duration: 0.3s;
-}
-
-.containerOne:hover {
-  background-color: #ff416c; 
-}
-
-.containerTwo:hover {
-  background-color: #00acee; 
-}
-
-.containerThree:hover {
-  background-color: #0072b1; 
-}
-
-.containerFour:hover {
-  background-color: #25d366; 
-}
-
-.socialContainer:active {
-  transform: scale(0.9);
-  transition-duration: 0.3s;
+  transition: background-color 0.3s, transform 0.3s;
+  position: relative;
 }
 
 .socialSvg {
-  width: 24px; 
-  height: 24px;
+  width: 32px;  
+  height: 32px;
+  transition: transform 0.3s, opacity 0.3s;
 }
 
 .socialSvg path {
-  fill: white; 
+  fill: white;
+  transition: fill 0.3s;
 }
 
-.socialContainer:hover .socialSvg {
-  animation: slide-in-top 0.3s both;
+.containerOne:hover {
+  background-color: #ff416c;
 }
+
+.containerTwo:hover {
+  background-color: #00acee;
+}
+
+.containerThree:hover {
+  background-color: #0072b1;
+}
+
+.containerFour:hover {
+  background-color: #25d366;
+}
+
+
+.socialContainer:hover .socialSvg {
+  transform: scale(1.2);
+}
+
 
 @keyframes slide-in-top {
   0% {
     transform: translateY(-50px);
     opacity: 0;
   }
-
   100% {
     transform: translateY(0);
     opacity: 1;
   }
+}
+
+
+.socialSvg {
+  animation: slide-in-top 0.5s ease-in-out;
 }
